<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginApp1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="inloggen">Inloggen</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="gebruiker">Gebruiker</string>
    <string name="welkom_op_de_website_van_groep_1_omtrent_city_game_onze_groep_bestaat_uit_9_studenten_toegepaste_informatica_van_het_3de_jaar_op_de_phl_verdeeld_over_de_drie_afstudeerrichtingen_snb_aon_swm_voor_meer_informatie_over_onze_groep_verwijzen_we_u_graag_door_naar_onze_leden_pagina_het_project_is_ontstaan_door_de_vraag_naar_een_vergelijkende_studie_tussen_html5_en_andere_mobiele_ontwikkelingsplatformen_de_opdrachtgever_tinfo_heeft_al_een_hele_geschiedenis_met_games_en_simulaties_en_hierdoor_zijn_ze_uitgekomen_op_het_idee_van_een_citygame_">Welkom op de website van groep 1 omtrent City Game. Onze groep bestaat uit 9 studenten Toegepaste Informatica van het 3de jaar op de PHL. Verdeeld over de drie afstudeerrichtingen SNB, AON, SWM. Voor meer informatie over onze groep verwijzen we u graag door naar onze leden pagina. Het project is ontstaan door de vraag naar een vergelijkende studie tussen HTML5 en andere mobiele ontwikkelingsplatformen. De opdrachtgever TINFO heeft al een hele geschiedenis met games en simulaties en hierdoor zijn ze uitgekomen op het idee van een citygame.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_map">Kaart</string>
    <string name="title_task">Opdracht</string>
    <string name="title_photo">Foto</string>
    <string name="title_chat">Chat</string>
    <string name="title_info">Info</string>
    <string name="jager">Jager</string>
    <string name="versturen">Versturen</string>
    <string name="prooi">Prooi</string>
    <string name="spelleider">Spelleider</string>

</resources>